--- a/css/style.css
+++ b/css/style.css
@@ -530,6 +530,12 @@ body.telegram-app .telegram-link {
     height: 100%;
 }
 
+/* Fruit emoji pieces for Kids Mode */
+.piece.fruit-piece {
+    font-size: calc(var(--cell-size) * 0.7);
+    filter: drop-shadow(1px 2px 2px rgba(0, 0, 0, 0.3));
+}
+
 .cell:active .piece {
     transform: scale(1.1);
 }
